feat: add profile and Wiki experience
